--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <section id="login">
             <div id="imagem">
-                <!-- Aqui vai a imagem no celular -->
+                <!-- Aqui vai a imagem ns CSS -->
             </div>
             <div id="formulario">
                 <h1>Login</h1>
@@ -29,7 +29,7 @@
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.htlm">
+                    <a href="esqueci.htlm" class="botao">
                         Esqueci a senha <i class="material-icons">mail</i>
                     </a>
                 </form>
